--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -22,17 +22,17 @@
             </div>
         </footer>
 
-        <script src="{{ .Site.BaseURL }}js/jquery-1.11.3.min.js"></script>
-        <script src="{{ .Site.BaseURL }}js/jquery.fitvids.js"></script>
+        <script src="{{ .Site.BaseURL }}js/jquery-1.11.3.min.js" async></script>
+        <script src="{{ .Site.BaseURL }}js/jquery.fitvids.js" async></script>
         
         {{ if .Site.Params.highlightJsUrl }}
-            <script src="{{ .Site.Params.highlightJsUrl }}"></script>
+            <script src="{{ .Site.Params.highlightJsUrl }}" async></script>
         {{ else if .Site.Params.highlightJsLocalUrl }}
-            <script src="{{ .Site.BaseURL }}{{ .Site.Params.highlightJsLocalUrl }}"></script>
+            <script src="{{ .Site.BaseURL }}{{ .Site.Params.highlightJsLocalUrl }}" async></script>
         {{ else }}
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" async></script>
         {{ end }}
         
-        <script src="{{ .Site.BaseURL }}js/scripts.js"></script>
+        <script src="{{ .Site.BaseURL }}js/scripts.js" async></script>
     </body>
 </html>
